Update AbstractFileHandler.java